--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,10 @@
         <a href="/login" class="col-3 btn btn-primary"> Login</a>
         <a href="/signup" class="col-3 btn btn-primary"> Signup</a>
     </div>
+    <div class="col-3">here we are.</div>
+    <div>here we are.</div>
+    <div>here we are.</div>
+    <img src="/imgs/around2.png"></img>
 </main>
     
 
