--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,8 +28,12 @@
   <body>
     <header class="container">
       <div class="text-center">
-        <h1 class=""><a href="/profile">Binary Upload Boom</a></h1>
-        <span>The #100Devs Social Network</span>
+        <!-- <h1 class=""><a href="/profile">Binary Upload Boom</a></h1> -->
+        <h1 class=""><a href="/profile">Catalysts Only (Boom)</a></h1>
+        <span>The #100Devs Social Network. Let's Make Things Happen!</span>
+      </div>
+      <div class="row justify-content-center">
+        ~our favorite header~
       </div>
     </header>
   </body>
