--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') -%>
-<div class="container">
+<div class="container bg-danger">
   <div class="row justify-content-center mt-5">
-    <div class="col-6">
+    <div class="col-6 bg-info border border-primary rounded">
       <h2><%= post.title %></h2>
       <img class="img-fluid" src="<%= post.image%>" />
       <div class="row justify-content-between">
@@ -28,8 +28,8 @@
       <p><%= post.caption %></p>
     </div>
     <div class="col-6 mt-5">
-      <a class="btn btn-primary" href="/profile">Return to Profile</a>
-      <a class="btn btn-primary" href="/feed">Return to Feed</a>
+      <a class="btn btn-primary" href="/profile" title="let's add a post!">Return to Profile</a>
+      <a class="btn btn-primary" href="/feed" title="let's go to the feed!">Return to Feed</a>
     </div>
   </div>
 </div>
