--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -38,7 +38,8 @@
         </ul>
         <div class="row justify-content-center mt-5">
           <a class="btn btn-primary" href="/feed">Return to Feed</a>
-        </div>  
+        </div>
+        <img src="/imgs/around_rev1.png"></img>
       </div>  
     </div>
   </div>
